<resources>
    <string name="app_name">CovidInfo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="flag_of_country">flag of country</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="countries_list">CountriesList</string>
    <string name="watch_list">WatchList</string>
    <string name="loading">Loading...</string>
    <string name="covidinfo">CovidInfo</string>
    <string name="coming_soon">Coming soon :)</string>
    <string name="country_info">Country Info</string>
    <string name="country">Country</string>
    <string name="active">Active</string>
    <string name="deaths">Deaths</string>
    <string name="recovered">Recovered</string>
    <string name="incident_rate">Incident Rate</string>
    <string name="people_tested">People Tested</string>
    <string name="country_code">Country Code</string>
    <string name="country_name">Country Name</string>
    <string name="confirmed">Confirmed</string>
    <string name="mortality_rate">Mortality Rate</string>
    <string name="last_updated">Last Updated</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="covidimage">covidImage</string>

</resources>