<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.CountryInfoActivity">



    <TextView
        android:id="@+id/country_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:text="@string/country_name"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@id/confirmed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.cardview.widget.CardView
        android:id="@+id/confirmed"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:focusable="true"
        android:foreground="?selectableItemBackground"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/green"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/death"
        app:layout_constraintTop_toBottomOf="@id/country_name"
        app:layout_constraintBottom_toTopOf="@id/mortality_rate">

        <TextView
            android:id="@+id/confirmedCauses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/confirmed"
            android:textSize="26sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/confimed_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:text="@string/confirmed"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/black"/>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/death"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"
        app:cardBackgroundColor="@color/green"
        android:focusable="true"
        android:foreground="?selectableItemBackground"
        app:cardCornerRadius="10dp"
        app:layout_constraintStart_toEndOf="@id/confirmed"
        app:layout_constraintTop_toBottomOf="@id/country_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/incident_rate">

        <TextView
            android:id="@+id/death_causes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/deaths"
            android:textSize="26sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/death_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:text="@string/active"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/black"/>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/mortality_rate"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:focusable="true"
        android:foreground="?selectableItemBackground"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/green"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/confirmed"
        app:layout_constraintEnd_toStartOf="@id/incident_rate"
        app:layout_constraintBottom_toTopOf="@id/latitude"
        >

        <TextView
            android:id="@+id/mortality_rate_causes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/mortality_rate"
            android:textSize="26sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/mortality_rate_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:text="@string/active"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/black"/>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/incident_rate"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:foreground="?selectableItemBackground"
        app:cardCornerRadius="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"
        app:cardBackgroundColor="@color/green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/mortality_rate"
        app:layout_constraintTop_toBottomOf="@id/death"
        app:layout_constraintBottom_toTopOf="@id/longitude">

        <TextView
            android:id="@+id/incident_rate_causes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/incident_rate"
            android:textSize="26sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/incident_rate_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="45dp"
            android:text="@string/active"
            android:textSize="20sp"
            android:textColor="@color/black"/>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/latitude"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:foreground="?selectableItemBackground"
        app:cardCornerRadius="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="12dp"
        app:cardBackgroundColor="@color/green"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/longitude"
        app:layout_constraintTop_toBottomOf="@id/mortality_rate"
        app:layout_constraintBottom_toTopOf="@id/last_update"
        >

        <TextView
            android:id="@+id/country_latitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/latitude"
            android:textSize="26sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/latitude_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="45dp"
            android:text="@string/active"
            android:textSize="20sp"
            android:textColor="@color/black"/>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/longitude"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:foreground="?selectableItemBackground"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/green"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/mortality_rate"
        app:layout_constraintTop_toBottomOf="@id/incident_rate">

        <TextView
            android:id="@+id/countryLongitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/longitude"
            android:textSize="26sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/longitude_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="45dp"
            android:text="@string/active"
            android:textSize="20sp"
            android:textColor="@color/black"/>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/last_update"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginTop="144dp"
        android:focusable="true"
        android:foreground="?selectableItemBackground"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/green"
        app:layout_constraintTop_toBottomOf="@id/latitude"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
       >

        <TextView
            android:id="@+id/last_update_causes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/last_updated"
            android:textSize="26sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/last_update_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="45dp"
            android:text="@string/active"
            android:textSize="20sp"
            android:textColor="@color/black"/>
    </androidx.cardview.widget.CardView>


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/last_update"
        android:contentDescription="@string/covidimage"
        android:src="@drawable/covid"/>


</androidx.constraintlayout.widget.ConstraintLayout>